# ChristmasPaper

./: .gitignore  ChristmasPaper.cabal  Geschenkpapier.cabal  LICENSE  README.md  flake.nix
src/: Main.hs
