name:                ChristmasPaper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ChristmasPaper#readme
license:             MIT
license-file:        LICENSE
author:              Wolfgang Thaller
maintainer:          wolfgang.thaller@gmx.net
copyright:           2018 Wolfgang Thaller
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ChristmasPaper
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    pretty >= 1.1, random >= 1.1, mtl >= 2.2
